--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,11 +53,11 @@
                         android:layout_height="wrap_content">
 
                         <EditText
-                            android:id="@+id/input_email"
+                            android:id="@+id/input_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="textEmailAddress"
-                            android:hint="Please enter your Email" />
+                            android:inputType="text"
+                            android:hint="Please enter your username" />
 
                     </android.support.design.widget.TextInputLayout>
                     <android.support.design.widget.TextInputLayout
