--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
+                <!-- input_username -->
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_email"
                         android:layout_width="match_parent"
@@ -61,7 +61,7 @@
                             android:inputType="text"
                             android:hint="Please enter your username" />
                     </android.support.design.widget.TextInputLayout>
-
+                <!--- input_password-->
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_password"
                         android:layout_width="match_parent"
@@ -74,7 +74,7 @@
                             android:inputType="textPassword"
                             android:hint="Please enter your password" />
                     </android.support.design.widget.TextInputLayout>
-
+                <!-- loginBtn-->
                     <Button
                         android:layout_margin="5dp"
                         android:id="@+id/loginBtn"
@@ -85,7 +85,7 @@
                         android:backgroundTint="@color/colorPrimaryDark"
                         android:textColor="@color/textColor"
                         />
-
+                <!--reglink-->
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
