--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -14,7 +14,8 @@
             android:adjustViewBounds="true"
             android:layout_margin="5dp"
             android:id="@+id/image"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            />
         <LinearLayout
             android:gravity="center"
             android:layout_weight="1"
