--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#e74c3c</color>
+    <color name="colorPrimary">#e67e22</color>
     <color name="colorPrimaryDark">#c0392b</color>
     <color name="colorAccent">#000000</color>
     <color name="textColor">#ecf0f1</color>
