--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,6 +11,7 @@
     android:orientation="vertical">
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
+        app:tabIndicatorColor="@color/colortab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
