--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#e67e22</color>
     <color name="colorPrimaryDark">#c0392b</color>
     <color name="colorAccent">#000000</color>
+    <color name="colortab">#ffffff</color>
     <color name="textColor">#ecf0f1</color>
 </resources>
