--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -39,6 +39,7 @@
                 <TextView
                     android:layout_weight="1"
                     android:gravity="right"
+                    android:textStyle="italic"
                     android:maxLines="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
