--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,7 +17,7 @@
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:src="@drawable/userdefault"/>
+        android:src="@drawable/ic_userdefault"/>
 
      <TextView
       android:layout_width="154dp"
@@ -126,7 +126,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:padding="3dp"
-                android:src="@drawable/userdefault"/>
+                android:src="@drawable/ic_userdefault"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
