--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +8,7 @@
     tools:context="com.seemran.koble.Login"
     android:id="@+id/coordinatorLogin">
 
+    <!--toolbar-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,6 +35,9 @@
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
+
+        <!--cardview-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -41,46 +46,59 @@
             <android.support.v7.widget.CardView
                 android:layout_margin="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="290dp">
 
                 <LinearLayout
                     android:layout_margin="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:id="@+id/profile_section">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="20dp"
+                        android:id="@+id/profile_pic"/>
+                    <!--- input_password-->
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp">
+
+                        <TextView
+                            android:id="@+id/input_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text"
+                            android:hint="name" />
+                    </android.support.design.widget.TextInputLayout>
+
                 <!-- input_username -->
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_email"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp">
 
-                        <EditText
-                            android:id="@+id/input_username"
+                        <TextView
+                            android:id="@+id/input_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
-                            android:hint="Please enter your username" />
+                            android:hint=" email" />
                     </android.support.design.widget.TextInputLayout>
-                <!--- input_password-->
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/input_layout_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
 
-                        <EditText
-                            android:id="@+id/input_password"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textPassword"
-                            android:hint="Please enter your password" />
-                    </android.support.design.widget.TextInputLayout>
-                <!-- loginBtn-->
+
+                <!-- loginbtn-->
                     <Button
                         android:layout_margin="5dp"
-                        android:id="@+id/loginBtn"
+                        android:id="@+id/loginbtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="LOGIN"
+                        android:text="LogIn"
                         android:layout_gravity="center_horizontal"
                         android:backgroundTint="@color/colorPrimaryDark"
                         android:textColor="@color/textColor"
@@ -95,11 +113,21 @@
                         android:inputType="text"
                         android:textColor="@color/colorPrimaryDark"/>
 
+
+
                 </LinearLayout>
+                <com.google.android.gms.common.SignInButton
+                    android:layout_marginTop="30dp"
+                    android:layout_gravity="center"
+                    android:id="@+id/sign_in_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
             </android.support.v7.widget.CardView>
+
 
         </LinearLayout>
 
     </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
