--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seemran.koble.CallFragment">
+    tools:context="com.seemran.koble.Fragments.CallFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
