--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seemran.koble.SettingsFragment">
+    tools:context="com.seemran.koble.Fragments.SettingsFragment">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
