--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seemran.koble.Home">
+    tools:context="com.seemran.koble.Activity.HomeActitvity">
     <LinearLayout
         android:id="@+id/linearMain"
         android:layout_width="match_parent"
