--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seemran.koble.Signin">
+    tools:context="com.seemran.koble.Extras.Signin">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
