--- a/app/src/main/res/layout/activity_googlelogin.xml
+++ b/app/src/main/res/layout/activity_googlelogin.xml
@@ -31,7 +31,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/toolbar_title"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="LOGIN"/>
+                    android:text="KOBLE - LOGIN"/>
 
 
             </android.support.v7.widget.Toolbar>
@@ -57,35 +57,40 @@
                     android:orientation="vertical"
                     android:id="@+id/profile_section">
 
-
-                    <!--- input_username-->
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/input_layout_username"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp">
-
-                        <EditText
-                            android:id="@+id/input_username"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:hint="Username" />
-                    </android.support.design.widget.TextInputLayout>
-
-                <!-- input_password -->
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="20dp"
+                        android:id="@+id/profile_pic"/>
+                    <!--- input_password-->
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp">
 
-                        <EditText
-                            android:id="@+id/input_password"
+                        <TextView
+                            android:id="@+id/input_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
-                            android:hint=" Password" />
+                            android:hint="name" />
+                    </android.support.design.widget.TextInputLayout>
+
+                <!-- input_username -->
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp">
+
+                        <TextView
+                            android:id="@+id/input_email"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text"
+                            android:hint=" email" />
                     </android.support.design.widget.TextInputLayout>
 
 
@@ -111,7 +116,12 @@
                         android:textColor="@color/colorPrimaryDark"/>
 
                 </LinearLayout>
-
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/sign_in_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    />
             </android.support.v7.widget.CardView>
 
 
