onCall UI reconfigured.

--- a/app/src/main/res/layout/contact.xml
+++ b/app/src/main/res/layout/contact.xml
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_callcolor"
             android:padding="20dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:id="@+id/call"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
