--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:windowSoftInputMode="adjustPan"
-    tools:context="com.seemran.koble.ChatPubnub.ChatActivity">
+    tools:context="com.seemran.koble.Activity.ChatActivity">
 
 
     <Button
