--- a/app/src/main/res/layout/activity_on_call.xml
+++ b/app/src/main/res/layout/activity_on_call.xml
@@ -28,7 +28,8 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="50dp"
-                android:src="@drawable/ic_volume_down" />
+                android:src="@drawable/ic_volume_off"
+                />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="50dp"
@@ -48,8 +49,11 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="70dp"
-                android:src="@drawable/ic_greenphone"
-                android:id="@+id/callphone"/>
+                android:src="@drawable/ic_call"
+                android:id="@+id/callphone"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/colorPrimary"
+                app:civ_fill_color="@color/colorPrimary"/>
 
     </LinearLayout>
 
