--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -1,27 +1,15 @@
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.seemran.koble.Fragments.CallFragment">
+    tools:context=".Fragments.CallFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/call_recyclerview">
-        </android.support.v7.widget.RecyclerView>
+        android:id="@+id/recyclercontacts">
 
-    </LinearLayout>
-
-
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" />-->
+    </android.support.v7.widget.RecyclerView>
 
 
 </android.support.design.widget.CoordinatorLayout>
