--- a/app/src/main/res/layout/activity__location.xml
+++ b/app/src/main/res/layout/activity__location.xml
@@ -1,38 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="368dp"
-        android:layout_height="551dp"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.seemran.koble.Location.LocationActivity"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+         tools:context="com.seemran.koble.Location.LocationActivity"
+        android:orientation="vertical">
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/ic_location"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"/>
 
         <Button
             android:id="@+id/fetch_address_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="fetch address"
-            android:onClick="fetchAddressButtonHandler" />
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
-
+            android:text="Find my Location"
+            android:onClick="fetchAddressButtonHandler"
+            android:layout_gravity="center"
+            android:layout_marginBottom="50dp"
+            android:backgroundTint="@color/colortab"/>
         <TextView
             android:id="@+id/location_address_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"/>
+             android:layout_gravity="center" />
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 
